# YDR7-Keyboard

./: .gitignore  BOM.csv  JOURNAL.md  README.md  TODOmd
Firmware/: CMakeLists.txt
Firmware/src/: main.cpp
Firmware/src/config/: board.h  user_config.h
Firmware/src/setup/: HID_setup.h  pin_setup.h
PCB/: PCB.kicad_pcb  PCB.kicad_pro  PCB.kicad_sch
